<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="choose">Choose file</string>
    <string name="description_hint">For example, type out the condition with more details, specify the city, e.g.</string>
    <string name="title_hint">For example, Stone Island hoodie, e.g.</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="condition">Condition</string>
    <string name="price">Price</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_title">The price of the item:</string>
    <string name="you_will_receive">You will receive:</string>
    <string name="_0">0$</string>
    <string name="confirm_the_price">Confirm the price</string>
    <string name="show_my_profile">Show my profile</string>
    <string name="account_settings">Account settings</string>
    <string name="email">E-mail:</string>
    <string name="change">Change</string>
    <string name="password">Password:</string>
    <string name="app_settings">App settings</string>
    <string name="theme">Theme:</string>
    <string name="appThemeTV">Light</string>
    <string name="click_to_change">Click to change</string>
    <string name="update_profile_picture">Update profile picture</string>
    <string name="about_me">About me</string>
    <string name="search_hint">Search...</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="bio_hint">For example, talk about your hobbies, interests, e.g.</string>
    <string name="gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="change_date">Change date</string>
    <string name="country">Country:</string>
    <string name="your_country">Your Country...</string>
    <string name="city">City:</string>
    <string name="your_city">Your City...</string>
    <string name="apply_changes">Apply changes</string>
    <string name="location">Location:</string>
    <string name="about_me_bio">About me:</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="empty">Empty :(</string>
    <string name="edit">Edit</string>
    <string name="size">Size</string>
    <string name="please_enter_your_password">Please enter your password:</string>
    <string name="your_new_e_mail">Your new E-mail:</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_current_password">Enter your current password:</string>
    <string name="your_new_password">Your new password:</string>
    <string name="update_password">Update Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="type_a_message">Type a message...</string>
    <string name="chats">Chats</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="Message">Message</string>
    <string name="delete">Delete</string>

    <string-array name="genders">
        <item>Not selected</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>
