<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/chatListFragment"
        android:icon="@drawable/ic_chat_bubble_black_24dp"
        android:title="@string/chats" />
    <item
        android:id="@+id/addFragment"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/add" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorites" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />

</menu>