<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/price_titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/price_title"
        android:textColor="@color/PlainTextColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_titleTV"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/PlainTextColor" />

    <LinearLayout
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/priceEditText"
        android:background="@color/BarColor"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/price_choiceTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:text="@string/you_will_receive"
        android:textColor="@color/PlainTextColor"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price_choiceCalcTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_choiceTitleTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textColor="@color/PlainTextColor"
        android:textSize="35sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/confirm_priceBtn"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_below="@+id/price_choiceCalcTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/confirm_the_price"
                android:textColor="@color/White"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>