<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ProgressBar
        android:id="@+id/changeFragmentProgress"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/confirm_Btn"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/passLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/password_changeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/please_enter_your_password"
            android:textColor="@color/PlainTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_changeTV"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/PlainTextColor" />

        <LinearLayout
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/passwordEditText"
            android:background="@color/BarColor"
            android:orientation="horizontal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/emailLayout"
        android:visibility="gone"
        android:layout_below="@+id/passLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/email_changeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/your_new_e_mail"
            android:textColor="@color/PlainTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_changeTV"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/PlainTextColor" />

        <LinearLayout
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/emailEditText"
            android:background="@color/BarColor"
            android:orientation="horizontal" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/confirm_Btn"
        android:layout_below="@id/emailLayout"
        android:layout_centerHorizontal="true"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/confirmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/confirm_password"
                android:textColor="@color/White"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>